# nixl

./: meson.build  meson_options.txt
examples/device/: meson.build
examples/device/pingpong/: bench_host.cpp  bench_host.h  bench_kernel.cu  bench_kernel.cuh  bench_kernel_iface.h  bench_main.cpp  meson.build
